--- a/cap3-la_nueva_filosofia_de_la_ciencia/tcii_ch3.tex
+++ b/cap3-la_nueva_filosofia_de_la_ciencia/tcii_ch3.tex
@@ -1,4 +1,4 @@
-% Created 2023-05-26 dv. 12:12
+% Created 2023-05-26 dv. 22:31
 % Intended LaTeX compiler: pdflatex
 \documentclass[a4paper, 11pt, twocolumn, spanish]{article}
 \usepackage[utf8]{inputenc}
@@ -24,7 +24,7 @@
  pdftitle={Apuntes de Teoría del Conocimiento ii},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.5.5)}, 
+ pdfcreator={Emacs 27.1 (Org mode 9.6.2)}, 
  pdflang={English}}
 \begin{document}
 
@@ -33,16 +33,16 @@
 
 
 \section{Introducción}
-\label{sec:org2a665ad}
+\label{sec:org71d3fc5}
 \subsection{El final del modelo clásico de cientificidad}
-\label{sec:orgd23626e}
+\label{sec:org810bac9}
 En las últimas décadas del s. XX hubo un profundo cambio en el ideal
 clásico de cientificidad. Se ha perdido el sentido lineal y
 acumulativo del devenir científico y se ha introducido la acción
 humana en la historia de la ciencia. La ciencia deja de ser un
 lenguaje perfecto. El mito de la presunta superioridad objetiva de la
 ciencia se viene abajo , al quedar de manifiesto la inserción de la
-elección en la práctica científica cotidiana.\\
+elección en la práctica científica cotidiana.\\[0pt]
 
 El ideal clásico de cientificidad estaba representado por el
 neopositivismo lógico. En contraposición a éste, podemos simplificar
@@ -65,11 +65,11 @@ una metodología que haga posible una comparación entre ellas.
 \end{enumerate}
 
 \subsection{Teoría de la ciencia y práctica científica}
-\label{sec:orgf616d03}
+\label{sec:org53d4d55}
 Hasta la fecha, se sostenía que las proposiciones verdaderamente
 científicas debían fundarse bien en la intuición (Descartes), bien en
 relaciones de observación (Locke), bien en principios sintéticos a
-priori (Kant).\\
+priori (Kant).\\[0pt]
 
 Durante el s. XIX, el auge de las ciencias atrae la atención hacia el
 estudio de sus métodos de trabajo y a su historia misma, desviándose
@@ -77,7 +77,7 @@ de este punto de vista. La aparición del círculo de Viena, enfatizando
 el conocimiento positivo, basado únicamente en la observación sensible
 de los hechos y en la lógica formal como instrumento de análisis
 (según el modelo de Russell), vuelve a restablecer la vigencia de las
-tesis clásicas en teoría de la ciencia.\\
+tesis clásicas en teoría de la ciencia.\\[0pt]
 
 Para los positivistas lógicos las proposiciones básicas, en las que se
 expresan las observaciones de la ciencia experimental, pueden servir
@@ -85,14 +85,14 @@ de base a generalizaciones cada vez más amplias.  Intentan formular la
 relación de confirmación entre una hipótesis y una proposición que
 exprese una evidencia. Esta corriente surge como una reacción frente a
 la retórica y las abstracciones de cierta filosofía basada en el rigor
-matemático de los lógicos.\\
+matemático de los lógicos.\\[0pt]
 Se tiene una clara imagen del estado de la ciencia en cada etapa. Se
 empieza a partir de los hechos establecidos y se hace uso de los modos
 de inferencia para llegar al nivel de las leyes y de las teorías. Se
 puede tener una conciencia exacta tanto de significación como de
 verdad, sobre el estado en que se está y sobre las relaciones de
 proposiciones de cada estado y los hechos a partir de los cuales se ha
-razonado.\\
+razonado.\\[0pt]
 
 Este método no se puede generalizar a cualquier proposición que se
 quiera saber si es verdadera o no. El principal fallo de esta
@@ -104,30 +104,30 @@ de una teoría general del conocimiento como había sido el caso en la
 tradición epistemológica clásica.
 
 \section{Principio de verificación y unificación del lenguaje científico. El círculo de Viena}
-\label{sec:org6694c88}
+\label{sec:orgd61404a}
 \subsection{La división del discurso}
-\label{sec:orga050fa8}
+\label{sec:org47715ad}
 \subsubsection{El isomorfismo lenguaje-realidad según el \emph{Tractatus}}
-\label{sec:org43e5624}
+\label{sec:org7a7cc1c}
 El \textbf{\emph{tractatus}} está escrito en forma de aforismos numerales según el
-sistema decimal y contiene siete proposiciones fundamentales.\\
+sistema decimal y contiene siete proposiciones fundamentales.\\[0pt]
 Las dos primeras \emph{El mundo es todo lo que acaece} y \emph{lo que acaece, el
 hecho, es la existencia de los hechos atómicos} se refieren al mundo y
-a la realidad.\\
+a la realidad.\\[0pt]
 Mientras que las cuatro siguientes son un desarrollo de la lógica y de
-teoría del lenguaje.\\
+teoría del lenguaje.\\[0pt]
 La última proposición, la enigmática frase De lo que no se puede
 hablar mejor es callarse, cierra el libro marcando el límite de lo que
-se puede pensar y decir (la proposición).\\
-Aunque la mayor parte del tractatus habla de la lógica y lenguaje (de
+se puede pensar y decir (la proposición).\\[0pt]
+Aunque la mayor parte del \emph{tractatus} habla de la lógica y lenguaje (de
 la proposición), los párrafos iniciales tratan del mundo y de la
 visión metafísica del mundo en términos del atomismo lógico
-(Russell).\\
+(Russell).\\[0pt]
 El mundo es la totalidad de los hechos y el lenguaje es la totalidad
 de las proposiciones. Ambos comparten una estructura lógica común y
 Wittgenstein relaciona realidad, lógica y lenguaje mediante \textbf{tres
 conceptos fundamentales}: hecho atómico, figura lógica y
-proposición.\\
+proposición.\\[0pt]
 
 \begin{enumerate}
 \item Hechos atómicos. El constituyente último del mundo son los
@@ -185,7 +185,7 @@ proposiciones del lenguaje ordinario; las del lenguaje filosófico las
 declara carentes de sentido.
 
 \subsubsection{La ciencia habla de la realidad, la filosofía habla del lenguaje}
-\label{sec:org94ee2c9}
+\label{sec:orge507f2b}
 El principal criterio de diferenciación consiste en afirmar que sólo
 la ciencia habla con legitimidad y sentido acerca dela realidad
 extra-lingüística, mientras que la filosofía sólo tiene la tarea de
@@ -196,12 +196,12 @@ actividad de segundo orden, metalingüística, que tiene por objeto el
 lenguaje y el discurso de las ciencias. Sólo excluyendo la ambición
 ontológica o metafísica de la filosofía tradicional, puede asignares
 la labor a la filosofía de analizar con ayuda de la lógica formal el
-lenguaje científico de la ciencia.\\
+lenguaje científico de la ciencia.\\[0pt]
 
 Los \textbf{enunciados referenciales} son aquellos que se refieren a objetos
 que se pueden identificar. Poseen contenido y sentido. Si los objetos
 referidos no son lingüísticos los enunciados son \textbf{realistas u
-objetivos}. Si sí lo son, entonces se llaman \textbf{metalingüísticos}.\\
+objetivos}. Si sí lo son, entonces se llaman \textbf{metalingüísticos}.\\[0pt]
 Uno de los objetivos principales del análisis lógico del lenguaje es
 descubrir a los enunciados metalingüísticos con apariencia realista y
 reformularlos correctamente a fin de que pongan claramente de
@@ -216,7 +216,7 @@ falso. La verificabilidad constituye el criterio del
 sentido. Cuando una palabra posee un significado, se dice que
 designa un concepto, mientras que si esta significación es sólo
 aparente y en realidad no a posee, entonces es un
-pseudoconcepto.\\
+pseudoconcepto.\\[0pt]
 Las condiciones para que una proposición tenga significado son:
 \begin{itemize}
 \item Que las notas empíricas de los términos incluidos en la
@@ -233,27 +233,27 @@ neopositivistas, el principio de verificación se aplica a un
 enunciado sustancialmente de dos formas.
 \begin{itemize}
 \item Determinando su coherencia lógica interna mediante el análisis
-de la posibilidad de reducirlo a enunciados más elementales.\\
+de la posibilidad de reducirlo a enunciados más elementales.\\[0pt]
 Se actúa así con los lenguajes formales con los que la verdad
 se decide sin recurrir a la experiencia porque es determinable
-a priori.\\
+a priori.\\[0pt]
 
 \item Recurriendo a la experiencia, que afecta a enunciados
 directamente referidos a la realidad y a los que integran las
-ciencias de la naturaleza.\\
+ciencias de la naturaleza.\\[0pt]
 Son enunciados cuya verificación requiere su confrontación con
-los hechos extralingüísticos a los que remiten.\\
+los hechos extralingüísticos a los que remiten.\\[0pt]
 Es una verificación empírica y a posteriori.
 \end{itemize}
 
 Los del primer tipo no aportan ninguna información verdaderamente
 que no estuviera ya comprendida en la sintaxis y la semántica del
 lenguaje utilizado. Están desprovista de sentido, como las
-tautologías en la lógica.\\
+tautologías en la lógica.\\[0pt]
 En cambio, los enunciados empíricos aportan informaciones sobre la
-realidad fáctica y extralingüística.\\
+realidad fáctica y extralingüística.\\[0pt]
 En cualquier caso, todo enunciado pertenece a una categoría o a la
-otra.\\
+otra.\\[0pt]
 
 Una distinción de esta misma distinción es la que se establece
 entre leyes empíricas y leyes teóricas:
@@ -261,12 +261,12 @@ entre leyes empíricas y leyes teóricas:
 \item Leyes empíricas son las que pueden ser confirmadas
 directamente mediante observaciones empíricas. Son leyes
 acerca de hechos observables. Contienen términos que designan
-hechos observables por los sentidos.\\
+hechos observables por los sentidos.\\[0pt]
 Se las obtiene mediante la generalización de los resultados
-de observaciones.\\
+de observaciones.\\[0pt]
 No sólo incluyen leyes cualitativamente simples —todos los
 cuervos son negros—, sino también leyes cuantitativas que
-surgen de observaciones simples.\\
+surgen de observaciones simples.\\[0pt]
 Se las usa para explicar hechos observados y predecir sucesos
 futuros observables.
 \item Leyes teóricas o hipotéticas son las que contienen términos
@@ -278,11 +278,11 @@ pueden ser medidos de manera simple y directa.
 \item Enunciados que expresan juicios éticos o estéticos. Al considerar
 el lenguaje básicamente informativo se determinan como ilegítimos
 y sinsentido los enunciados que expresan sentimientos o
-valores.\\
+valores.\\[0pt]
 Los preceptos morales sólo expresan emociones positivas o
 negativas respecto de acciones y de situaciones
 descriptibles. Estos usos lingüísticos no presentan interés para
-la ciencia no para la filosofía.\\
+la ciencia no para la filosofía.\\[0pt]
 
 En esta posición radical en favor del discurso científico como
 idealmente objetivo y universal y este desprecio por las
@@ -302,7 +302,7 @@ valores, entre lo que es y lo que debe ser.
 
 
 \subsection{El lenguaje unificado de la ciencia}
-\label{sec:org0080fec}
+\label{sec:org50edc5d}
 El ideal de una ciencia unificada es característico del pensamiento
 moderno desde Descartes, que se plantean construir una matemática
 universal. El neopositivismo retoma este objetivo y lo reformula en el
@@ -311,7 +311,7 @@ utilización de un lenguaje. Se espera la superación de la diversidad
 de las ciencias si se descubre o se construye ese lenguaje al que se
 puedan reconducir los diferentes lenguajes científicos. La unificación
 de las ciencias requiere la construcción de un lenguaje universal y
-unitario de la ciencia.\\
+unitario de la ciencia.\\[0pt]
 
 Carnap en \emph{La estructura lógica del mundo} (1928) defiende como
 condición básica de ese lenguaje que sus enunciados básicos se
@@ -321,20 +321,20 @@ sensaciones. Las cosas son elaboraciones lógicas que realizamos sobre
 la base de nuestro contenidos sensoriales. Lo propio de las
 proposiciones científicas debe ser la posibilidad de que puedan quedar
 reducidas a un lenguaje compuesto de símbolos de los contenidos
-sensoriales.\\
+sensoriales.\\[0pt]
 
 El problema es que garantiza la objetividad de la ciencia ni su
 exigencia universal. Se basaría en experiencias subjetivas de cada
 individuo, pudiendo diferir. Los enunciados básicos de este lenguaje
-no serían comunes más que en apariencia.\\
-Neurah dió un giro distinto con su planteamiento fisicalista. El mundo
+no serían comunes más que en apariencia.\\[0pt]
+Neurah dio un giro distinto con su planteamiento fisicalista. El mundo
 está constituido por objetos que existen con independencia de mi
 experiencia. A esos objetos se refieren directamente los términos y
 enunciados del lenguaje científico. Construir un lenguaje básico para
 la ciencia representa descubrir los enunciados elementales y los
 objetos o hechos elementales constitutivos de la realidad. Luego se
 podrá traducir cualquier enunciado a ese lenguaje básico relativo a
-estados  procesos del mundo físico.\\
+estados  procesos del mundo físico.\\[0pt]
 
 En el seno del fisicalismo, durante el s. XX se cuestiona la
 naturaleza referencial o realista de su propio lenguaje. Por otra
@@ -344,7 +344,7 @@ neopositivista de unificación de las ciencias por la unificación de
 sus lenguajes se queda en mera aspiración.
 
 \subsection{La crítica de la metafísica}
-\label{sec:org098fbac}
+\label{sec:orga4aeadb}
 El análisis lógico-positivo del lenguaje responsabiliza del sentido o
 bien a errores sintácticos en los enunciados, o bien a abusos
 semánticos. Es decir, son enunciados sin sentido aquellos en los que
@@ -352,7 +352,7 @@ se combinan palabras que pertenecen a categorías diversas, pero que
 considerados por separado o utilizados correctamente, tienen
 significado. También son sin sentido los enunciados que incluyen
 palabras sin una referencia determinable, como los enunciados
-metafísicos.\\
+metafísicos.\\[0pt]
 
 El neopositivismo reduce la metafísica a un conjunto e errores
 sintácticos y de abusos semánticos del lenguaje. Desde la perspectiva
@@ -389,11 +389,11 @@ puesto que compartirían un punto de vista común (el metalingüístico) y
 una referencia común (el lenguaje).
 
 \section{Investigación científica y desarrollo del conocimiento: Popper}
-\label{sec:org7d551d0}
-\subsection{La crítica a la apistemología inductiva}
-\label{sec:orgdef81cd}
+\label{sec:org4e27560}
+\subsection{La crítica a la epistemología inductiva}
+\label{sec:org88d5143}
 La tradición empirista tiene como método fundamental de la ciencia
-modern la inducción para establecer conceptos y teorías. Popper
+moderna la inducción para establecer conceptos y teorías. Popper
 rechaza los tres principios básicos del empirismo relativos al
 conocimiento:
 \begin{enumerate}
@@ -401,91 +401,88 @@ conocimiento:
 de la ciencia y e la ciencia, la suposición de la capacidad mente
 humana para alcanzar verdades universales válidas que se
 generalizan a partir de la observación repetida de casos
-particulares.\\
-Para Popper no se pueden verifcar proposiciones o teorías de
-carácter universal a partir de proporsiciones particulares que no
+particulares.\\[0pt]
+Para Popper no se pueden verificar proposiciones o teorías de
+carácter universal a partir de proposiciones particulares que no
 las contradigan —la observación de muchos cuervos negros no
 implica que todos los cuervos sean negros.
 \item No cree que la mente, en el proceso del conocimiento, adopte
-sólamente una \textbf{actitud pasiva y receptiva}. La mente no es una hoja
+solamente una \textbf{actitud pasiva y receptiva}. La mente no es una hoja
 de papel en blanco en la que la percepción de entrada a las
 sensaciones que se abstraerían para formar conceptos.
 \item Rechaza el \textbf{principio de verificación} como criterio de sentido
 desde el cual, los pensadores empiristas y positivistas han
 realizado la crítica a la metafísica que la reduce al
-sinsentido.\\
-Las teorías no son verificable empíricamente.\\
+sinsentido.\\[0pt]
+Las teorías no son verificable empíricamente.\\[0pt]
 Es necesario un nuevo criterio que separe la ciencia y la
 metafísica, \textbf{demarcación}, establezca las distintas características de uno y
 otro saber.
 \end{enumerate}
 
 \subsection{El problema de la demarcación}
-\label{sec:orgfc49306}
+\label{sec:org7f1a740}
 Este surge al intentar distinguir las diferencias entre la teoría de
 Einstein y las teorías del marxismo, el psicoanálisis y la psicología
 del individuo. Popper se pregunta porqué estas últimas son tan
 diferentes de las de Einstein, Newton etc. Aún presentándose como
 ciencias de hechos, encuentra elementos en común con los mitos
 primitivos que con la ciencia, se asemejaban más a la astrología que a
-la astronomía.\\
+la astronomía.\\[0pt]
 
 Popper sostiene que la diferencia es que las teorías de Einstein \&
-cia. podían ser refutadas por un acntecimiento que se predijera
+cia. podían ser refutadas por un acontecimiento que se predijera
 partiendo de ellas, mientras que las otras resultaban siempre
-confirmadas por cualquier experiencia posible.\\
+confirmadas por cualquier experiencia posible.\\[0pt]
 Sólo las primeras eran auténticas teorías científicas en la medida en
 que sólo de ellas es posible decir que son comprobables por la
-experiencia.\\
+experiencia.\\[0pt]
 Pero no desprecia el valor de las segundas, muy importantes en el
-devenir de la historia del hombre.\\
+devenir de la historia del hombre.\\[0pt]
 
 
 La diferencia fundamental entre unas i otras es que las primera no
 asumen que el carácter científico de sus teorías viene dado por la
-acumulación de hechos que reforzan el sentido de la teoría descartando
-los que no lo hicieran, sino mediante la determinación de una
-experiencia decisiva, una prueba en forma de predicción deducida de la
-teoría —pero no deducido de la teoría rival, y que pudiera ser o no
-precisamente confirmada por la observación.\\
+acumulación de hechos que refuerzan el sentido de la teoría
+descartando los que no lo hicieran, sino mediante la determinación de
+una experiencia decisiva, una prueba en forma de predicción deducida
+de la teoría —pero no deducido de la teoría rival, y que pudiera ser o
+no precisamente confirmada por la observación.\\[0pt]
 
 Este punto de partida es el que permite manifestar y ahondar en la
 diferencia entre su criterio y el criterio positivista de
-significado.\\
+significado.\\[0pt]
 Con el criterio de refutabilidad, como criterio de demarcación, traza
 una línea divisoria entre los enunciados o sistemas de enunciados
 empíricos y todos los otros enunciados. Así, no se trata de un
 problema de sentido o de significación, ni de verdad o aceptabilidad,
-sino de demarcación.\\
+sino de demarcación.\\[0pt]
 
-Per al mismo tiempo, el criterio de demarcación envuelve un problema
+Por al mismo tiempo, el criterio de demarcación envuelve un problema
 ontológico de envergadura. Popper se centra en la cuestión del
 desarrollo de la ciencia, siendo su referencia polémica las nuevas
 ciencias sociales y humanas.
 
 \subsection{El aspecto metodológico}
-\label{sec:org41f4bd7}
-
-
-
+\label{sec:org549add2}
 Popper entiende la filosofía como teoría del conocimiento científico o
 epistemológico. El problema fundamental de la epistemología no es el
 de la estructura de la ciencia, sino el del desarrollo de la ciencia
 —siempre será un asunto a resolver el de a qué cosa hemos de llamar
 una ciencia. La epistemología no debe ser propiamente una lógica de la
 ciencia, sino un lógica de la investigación científica, una lógica del
-procedimiento sagún el cual se desarrolla el conocimiento
-científico. La epistemlogía se reduce a metodología de la ciencia.\\
+procedimiento según el cual se desarrolla el conocimiento
+científico. La epistemología se reduce a metodología de la ciencia.\\[0pt]
 Popper lo compara con el ajedrez, de la misma manera que que es
 posible definir el ajedrez mediante sus reglas, la ciencia empírica
-puede definirse por medio de sus regals metadológicas.\\
+puede definirse por medio de sus reglas metodológicas.\\[0pt]
 
 
-Esta metodología e la ciencia deberá clariicar el concepto mismo de
-ciencia, aunque su problema fundmental será el del desarrollo del
+Esta metodología e la ciencia deberá clarificar el concepto mismo de
+ciencia, aunque su problema fundamental será el del desarrollo del
 conocimiento. No se trata de precisar un único método, sino que es
 apropiado usar tantos métodos necesarios para avanzar en la resolución
-del problema dado.\\
+del problema dado.\\[0pt]
 De este modo, ni el análisis del lenguaje común que parte de
 Wittgenstein, ni el análisis del lenguaje científico del circulo de
 Viena son métodos exclusivos de la teoría del conocimiento:
@@ -500,26 +497,26 @@ precariedad de estos mismos y porque tampoco tiene como objetivo
 abordar la cuestión del desarrollo de la ciencia.
 \end{enumerate}
 
-El único modelo que se puede postular es el de la discución racional
+El único modelo que se puede postular es el de la discusión racional
 común a toda pretensión de racionalidad, la ciencia y la filosofía,
 que consiste en exponer claramente los problemas y discutir
 argumentativa y críticamente las soluciones propuestas.
 
 \subsection{El aspecto filosófico}
-\label{sec:org365c198}
-Popper, mediante su criterio de demarcación, trata de dsitingir entre
-dos tipos de eunciados, de manera que podamos saber a cual nos
+\label{sec:orgb4e8a94}
+Popper, mediante su criterio de demarcación, trata de distinguir entre
+dos tipos de enunciados, de manera que podamos saber a cual nos
 referimos cuando hablamos de filosofía de la ciencia. Define así su
-problema de la denarcación:
+problema de la demarcación:
 \begin{enumerate}
-\item Es el problema de delimitar lo que es la ciencia epírica respecto
+\item Es el problema de delimitar lo que es la ciencia empírica respecto
 de lo que es sólo pseudociencia. Cuando debe ser considerada
 científicamente una teoría o cuál sería su criterio para
 definirla como ciencia. No se trata de responder a la cuestión de
 la verdad o falsedad de una teoría.
 \item Es el problema de definir qué se entiende por experiencia. en
 último término, delimitar la ciencia es definir lo que entendemos
-por experiencia.\\
+por experiencia.\\[0pt]
 Hay muchos sistemas teóricos posibles. Entre ellos tiene que
 haber alguno que represente el mundo de nuestra experiencia. Este
 es la ciencia empírica.
@@ -531,57 +528,57 @@ nuestra experiencia e interpretación del mundo.
 Este intento de identificar este problema como el problema
 metodológico de fijar una convención sobre lo que deba entenderse por
 ciencia empírica, \textbf{desplaza al ámbito de discusión de la epistemología
-a la discusión de la coherencia} de unas reglas metodológicas.\\
-Pero los criteros de coherencia están definidos por las propias reglas
-del método científico. Supone pues, la renuncia al análisis del
+a la discusión de la coherencia} de unas reglas metodológicas.\\[0pt]
+Pero los criterios de coherencia están definidos por las propias
+reglas del método científico. Supone pues, la renuncia al análisis del
 concepto de ciencia, de definir lo que habrá que entender por
 experiencia y por realidad.
 
 Esto ha dado pie a algunos \textbf{críticos} a denunciar que es inevitable
 que lo que quede demarcado como ciencia dentro de la epistemología de
 Popper será conocimiento de realidad y lo que queda fuera de la
-ciencia será ilusión, engaño o mitología, por más que Popper se
-empenye a hacer ver que su problema de demarcación es diferente al
-problema positivista de separar enunciados con sentido de los
-enunciados sin sentido.\\
+ciencia será ilusión, engaño o mitología, por más que Popper se empeña
+a hacer ver que su problema de demarcación es diferente al problema
+positivista de separar enunciados con sentido de los enunciados sin
+sentido.\\[0pt]
 
 En cualquier caso, con la idea de demarcación se eleva una determinada
-conceptción del método de la ciencia natural a método del conocimiento
+concepción del método de la ciencia natural a método del conocimiento
 científico y racional. Se produce una cierta confusión entre
 epistemología y metodología coo consecuencia previa de la
 desvalorización de un tipo de racionalidad, e.g. ciencias humanas,
-frente a otro, ciencias naturales.\\
+frente a otro, ciencias naturales.\\[0pt]
 Más que la reducción de la racionalidad a la racionalidad científica,
-lo caracterísico de Popper es una concepción \textbf{empirista y positivista}
-de la ciencia y de la filosofía, y de la razón. El problema del
-desarrollo del conociiento desemboca en el problema general de la
-racionalidad.
+lo característico de Popper es una concepción \textbf{empirista y
+positivista} de la ciencia y de la filosofía, y de la razón. El
+problema del desarrollo del conocimiento desemboca en el problema
+general de la racionalidad.
 
-\subsection{La falsabilidad como criterio de demaración}
-\label{sec:org29ebdde}
+\subsection{La falsabilidad como criterio de demarcación}
+\label{sec:org0155f7b}
 
 \subsubsection{Actitud científica y actitud dogmática}
-\label{sec:org011f9c6}
-Popper el metodo científico engloba el empleo de la hipótesis de
+\label{sec:orge1ea64c}
+Popper el método científico engloba el empleo de la hipótesis de
 alcance general la deducción de enunciados particulares que afirman
 posibilidad de observación de un hecho determinado, la comprobación en
 la medida de lo posible y la decisión de abrirse a comprobaciones
-ulteriores en funcion de la evolución del conocimiento, la experiencia
-y la ciencia.\\
+ulteriores en función de la evolución del conocimiento, la experiencia
+y la ciencia.\\[0pt]
 
-Así, el criterio de dientificidad como criterio de demarcación se
+Así, el criterio de cientificidad como criterio de demarcación se
 basará fundamentalmente en la prueba de falsabilidad para una
 teoría. Es decir, la comprobación en circunstancias precisas en las
-que podría verse uno obligado a abandonar la teoría.\\
-Una actitud científica debe afrontar este tipo de priebas. Lo que pasa
+que podría verse uno obligado a abandonar la teoría.\\[0pt]
+Una actitud científica debe afrontar este tipo de pruebas. Lo que pasa
 con las teorías psicoanalíticas y marxistas es que tratan de evitar
 este tipo de pruebas decisivas utilizando diversos procedimientos:
 \begin{enumerate}
-\item Empleando una termiología abstracta y generalista que no se
+\item Empleando una terminología abstracta y generalista que no se
 corresponda con hechos observables, pero que cumpla una función
 esencial en la teoría.
 \item Utilizando conceptos que permiten neutralizar observaciones
-capaces de contradir e incluso refutar la teoría.
+capaces de contradecir e incluso refutar la teoría.
 \item Realizar una observación selectiva de datos o de hechos que sólo
 descubran y se describan en función de la teoría.
 \end{enumerate}
@@ -591,23 +588,127 @@ o de superación de la dialéctica en el marxismo, postulan
 contradicciones, antítesis. Pero no crean problemas, ya que el
 freudismo o marxismo se refuerzan con ellas. Estas teoría no pueden
 ser refutadas por la evidencia de una incoherencia o de un
-conflicto. Lo que no va en sentido de la teoría queda excluido.\\
-Se trata de la auseencia de distanciamento crítico, típico de la
+conflicto. Lo que no va en sentido de la teoría queda excluido.\\[0pt]
+Se trata de la ausencia de distanciamiento crítico, típico de la
 creencia, de la ideología, de la fe, etc. y que inmuniza a la teoría
 en la que se cree haciéndola infalible. De ahí el dogmatismo que se
 refuerza por la habilidad para interpretarlo todo siempre en la
 dirección ortodoxa.
 
 \subsubsection{Falsibilidad y contrastabilidad}
-\label{sec:orgb2be11b}
+\label{sec:org7e34f3f}
 El criterio de la demarcación de Popper es la falsabilidad,
 refutabilidad o contrastabilidad de las teorías. Se trata de la
 alternativa al principio positivista de verificabilidad y a la
-metodolgía induccionista. La falsabilidada supone:
+metodología induccionista. La falsabilidada supone:
 \begin{enumerate}
 \item Un modo concreto de entender la ciencia empírica al que debe
-responeder a tal criterio.
+responder a tal criterio.
 \item Un modo de entender el valor de la epistemología desde la que
 habrá que comprender la función de tal criterio.
 \end{enumerate}
+
+En cuanto al \textbf{criterio de delimitación} de los enunciados científicos
+de los no científicos, hay dos aspectos a tener en cuenta: su carácter
+propiamente empírico y su carácter evolutivo.\\[0pt]
+El \textbf{carácter empírico} dela ciencia implica que los enunciados
+científicos nos proporcionan información sobre la experiencia y que
+son capaces de explicar la experiencia.\\[0pt]
+El \textbf{carácter evolutivo} de la ciencia implica también deos notas de los
+enunciados científicos: Que tienen un carácter hipotético, i.e., no
+tienen una validez definitiva, y que tienen un carácter progresivo,
+i.e., que suponen un aumento real de nuestro conocimiento.\\[0pt]
+
+La fasabilidad, como norma metodológica, hará referencia a la
+estructura lógica de los enunciados científicos y, por otra, a los
+procedimientos de la investigación científica —a las reglas
+metodológicas que se utilizan para manejar enunciados científicos. \\[0pt]
+Afirmar que una teoría pertenece a la ciencia empírica es afirmar algo
+acerca de algo que no es ni tautológica —que no afirma nada—, ni
+contradictoria —lo afirma todo—, ni metafísica —afirma algo que no
+puede ser comprobado en la experiencia.\\[0pt]
+Enunciado científico es, pues, enunciado que afirma algo sobre la
+experiencia. La forma de saberlo es contrastando el enunciado con la
+experiencia.\\[0pt]
+El problema que surge es saber cómo se puede llevar a cabo esta
+contrastación.\\[0pt]
+
+Una teoría científica no es directamente contrastable con la
+experiencia, ya que esta es particular y concreta, mientras que la
+teoría es universal y abstracta. Sin embargo, los enunciado básicos
+—enunciados deducidos de una teoría que describen hechos de la
+experiencia— sí pueden ser directamente comparados con la
+experiencia.\\[0pt]
+\textbf{Contrastar una teoría} con la experiencia es deducir enunciados
+singulares a partir de ella y verificar en la práctica estos
+enunciados. \\[0pt]
+Pueden pasar dos cosas:
+\begin{enumerate}
+\item Que los enunciados singulares sean refutados por la
+experiencia. La teoría queda también refutada.
+\item Que los enunciados singulares sean verificados por la
+experiencia. La teoría no queda verificada, sino solo probada
+provisionalmente.
+\end{enumerate}
+
+Los enunciados teóricos sin enunciados universales, que comprenden
+infinitos casos de enunciados particulares. La verdad de un enunciado
+universal no se puede dar por la verdad de un enunciado particular.\\[0pt]
+De esta manera parece que la falsabilidad, como criterio de
+demarcación, es útil para dar cuenta del carácter empírico de las
+teorías empíricas.\\[0pt]
+
+Pero para llegar a identificar este primer aspecto del carácter
+empírico de la ciencia con la falsibilidad de los enunciados
+científicos se han llevado a cabo varias reducciones.\\[0pt]
+Solo podemos saber si un enunciado habla acerca de la experiencia si
+habla acerca de hechos singulares, y si es posible que lo que afirma
+acerca de hechos singulares sea falso.\\[0pt]
+
+Esto tiene como consecuencia una limitación empirista del concepto de
+ciencia que deja fuera de la racionalidad científica a todo conjunto
+de enunciados que no se refieran a experiencias o hechos. Se dejan
+fuera los enunciados filosóficos y muchos enunciados metafísicos.\\[0pt]
+Sin embargo, los enunciados metafísicos, aunque no falsables, juegan
+un papel importante en la ciencia, pero en la medida que, mediante la
+evolución de la ciencia, lleguen a ser falsables.\\[0pt]
+
+La distinción entre falsabilidad y falsación se corresponde con la
+distinción con la distinción entre el problema de la demarcación y el
+problema del método de la ciencia.\\[0pt]
+Todo sistema empírica tiene que ser, además, falsable. Los enunciados
+que satisfacen la condición de coherencia son incapaces de efectuar
+discriminación alguna entre dos enunciados cualesquiera. Los que no
+satisfacen la condición de falsabilidad no son capaces de efectuar
+discriminación entre dos enunciados cualesquiera que pertenezcan a la
+totalidad de todos los enunciados empíricos básicos posibles.
+
+\subsection{La concepción de la ciencia}
+\label{sec:org3d12e2f}
+\subsubsection{Enunciados básicos y teorías}
+\label{sec:org0edbc97}
+El primer aspecto a determinar es la relación entre ciencia y
+experiencia. La ciencia se concibe como un conjunto organizado de
+enunciados. El problema de la relación entre la experiencia y la
+ciencia se formulará como problema de las relaciones entre enunciados
+teóricos y enunciados de hechos, i.e., entre teorías y enunciados
+básicos.\\[0pt]
+Las teorías se caracterizan respecto de los enunciados básico por ser
+falsables, y éstos respecto de a la teoría por ser sus posibles
+falsadores. Lo relevante es el método de llevar a cabo la
+contrastación entre unos y otros, el método de la falsación de la
+teoría o de su sometimiento a falsación.\\[0pt]
+
+Contrastar la teoría será contrastar los enunciados teóricos con los
+enunciados básicos. Pero esto no resuelve el problema del empirismo
+lógico, el de la justificación del carácter empírico de los enunciados
+básicos mismos, el problema de la relación entre lenguaje y
+experiencia, a través de la relación entre enunciados y hechos y
+experiencia de hechos. Este problema se desdobla en la epistemología
+de Popper \textbf{en dos problemas}: El problema de la aceptación de
+enunciados básicos para la falsación de una teoría y el problema de la
+justificación de esa aceptación.
+
+\subsubsection{Aceptación de enunciados básicos}
+\label{sec:org3e6adef}
 \end{document}
